Ensure progressTable's horizontal scrollbar is fully accessible.

--- a/css/portal-dashboard/portal-dashboard-app.less
+++ b/css/portal-dashboard/portal-dashboard-app.less
@@ -15,7 +15,7 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    height: calc(100vh - @top-nav-height - @header-height - @top-margin);
+    height: calc(100vh - @top-nav-height - @header-height - @top-margin - 14px);
     width: 100%;
     overflow-x: auto;
     overflow-y: auto;
